--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ before_install:
  - travis_retry sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
  - travis_retry sudo sh -c "echo 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.6 main' >> /etc/apt/sources.list"
  - wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
- - travis_retry sudo apt-get update
- - travis_retry sudo apt-get install cabal-install-1.18 ghc-7.6.3 alex-3.1.3 happy-1.19.4
- - travis_retry sudo apt-get install llvm-3.6
+ - travis_retry sudo apt-get -q update
+ - travis_retry sudo apt-get -q install cabal-install-1.18 ghc-7.6.3 alex-3.1.3 happy-1.19.4
+ - travis_retry sudo apt-get -q install llvm-3.6
  - export PATH=/opt/ghc/7.6.3/bin:/opt/cabal/1.18/bin:/opt/alex/3.1.3/bin:/opt/happy/1.19.4/bin:/usr/lib/llvm-3.6/bin:$PATH
 
 # Be explicit about which protocol to use, such that we don't have to repeat the rewrite command for each.
