--- a/ghc/ghc-bin.cabal.in
+++ b/ghc/ghc-bin.cabal.in
@@ -43,6 +43,7 @@ Executable ghc
 
     GHC-Options: -Wall
     if flag(ghci)
+        Build-depends: deepseq >= 1.4 && < 1.5
         CPP-Options: -DGHCI
         GHC-Options: -fno-warn-name-shadowing
         Other-Modules:
