--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -260,6 +260,7 @@ Library
         CoreUnfold
         CoreUtils
         CoreSeq
+        CoreStats
         MkCore
         PprCore
         Check
