Build system: prevent "warning: overriding commands for target..."
This happened because the dyn way was listed twice in GhcLibWays for
BuildFlavour=perf.

--- a/mk/build.mk.sample
+++ b/mk/build.mk.sample
@@ -94,6 +94,7 @@ GhcLibHcOpts    = -O2
 #BUILD_DOCBOOK_PS
 #BUILD_DOCBOOK_PDF
 
+GhcLibWays  = v
 GhcLibWays += p
 ifeq "$(PlatformSupportsSharedLibs)" "YES"
 GhcLibWays += dyn
