Fix todo in compiler/nativeGen: Rename Size to Format
This commit renames the Size module in the native code generator to
Format, as proposed by a todo, as well as adjusting parameter names in
other modules that use it.

Test Plan: validate

Reviewers: austin, simonmar, bgamari

Reviewed By: simonmar, bgamari

Subscribers: bgamari, simonmar, thomie

Projects: #ghc

Differential Revision: https://phabricator.haskell.org/D865

--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -506,7 +506,7 @@ Library
             TargetReg
             NCGMonad
             Instruction
-            Size
+            Format
             Reg
             RegClass
             PIC
