CoreUtils: Move seq* functions to CoreSeq
These seem to sit near the top of the import graph and have been causing
import cycles.

--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -259,6 +259,7 @@ Library
         CoreTidy
         CoreUnfold
         CoreUtils
+        CoreSeq
         MkCore
         PprCore
         Check
