Build system: do not build stm and parallel by default
stm and parallel have an 'extra' tag in the ./packages file, so would get
added to PACKAGES_STAGE2 by default, and subsequently build by the stage2
compiler.

With this patch, this happens only when you set BUILD_EXTRA_PKGS=YES in
build.mk. A normal validate still builds (and tests) the 'extra'
packages, but they are skipped for `validate --fast`. Maybe this brings
us closer to finishing within the 50 minute Travis limit as well.

We can later try to give random, primitive and vector an 'extra' tag as
well (now they have a 'dph' tag), but some tests will probably fail at
first.

Differential Revision: https://phabricator.haskell.org/D1065

--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -773,6 +773,8 @@ endif
 
 # Build DPH?
 BUILD_DPH = NO
+# Build the "extra" packages (see ./packages)?
+BUILD_EXTRA_PKGS = NO
 
 ################################################################################
 #
