--- a/mk/build.mk.sample
+++ b/mk/build.mk.sample
@@ -69,6 +69,10 @@ V = 1
 # working on stage 2 and want to freeze stage 1 and the libraries for
 # a while.
 
+# Build the "extra" packages (see ./packages). This enables more tests. See:
+# https://ghc.haskell.org/trac/ghc/wiki/Building/RunningTests/Running#AdditionalPackages
+#BUILD_EXTRA_PKGS=YES
+
 # Uncomment the following line to enable building DPH
 #BUILD_DPH=YES
 
